fixed product box height/titlewrapping issue #96 and cursor styling #97

--- a/src/app/sass/category.scss
+++ b/src/app/sass/category.scss
@@ -34,7 +34,6 @@
 				box-shadow: 1px 0 10px 2px #ccc;
 				float:left;
 				min-height:250px;
-				cursor: pointer;
 
 				.product-header{
 					margin-bottom:10px;
@@ -156,7 +155,7 @@
 				.product{
 					width: 45%;
 					margin: 10px;
-					min-height:350px;
+					min-height:360px;
 				}
 			}
 		}
